--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
       #- $(aws ecr get-login --region ap-south-1 --no-include-email)
       - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 489994096722.dkr.ecr.us-east-2.amazonaws.com
       - # Replace with this to your repository URI
-      - REPOSITORY_URI=489994096722.dkr.ecr.us-east-2.amazonaws.com/test-ecr
+      - REPOSITORY_URI=489994096722.dkr.ecr.us-east-2.amazonaws.com/testecr
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
   build:
     commands:
